# bot-Horas_Complementares

./: .env.example  .env.railway.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_file_content_to_evidences.py  0002_file_content.py  0003_received_documents_and_storage_metadata.py
app/: configuracoes.py  principal.py
app/api/: categorias.py  dependencias.py  regras.py  saude.py  submissoes.py  submissoes_usuario.py  telegram.py  usuarios.py
app/bot/: cliente_telegram.py  polling_telegram.py  servico_telegram.py
app/db/: sessao.py
app/domain/: enumeracoes.py
app/models/: __init__.py  campos_tempo.py  categoria_atividade.py  comprovante.py  documento_recebido.py  evento_auditoria.py  regra.py  submissao.py  submissao_comprovante.py  usuario.py
app/repositories/: repositorio_auditoria.py  repositorio_categorias.py  repositorio_comprovantes.py  repositorio_documentos_recebidos.py  repositorio_regras.py  repositorio_submissoes.py  repositorio_usuarios.py
app/schemas/: categoria.py  regra.py  submissao.py  telegram.py  usuario.py
app/services/: armazenamento_arquivos.py  dados_iniciais_ufrj_bcc.py  excecoes.py  motor_regras.py  servico_documentos_recebidos.py  servico_regras.py  servico_submissoes.py  servico_usuarios.py
tests/: conftest.py
tests/integration/: teste_api.py  teste_migrations.py  teste_telegram.py
tests/unit/: teste_motor_regras.py  teste_servico_submissoes.py
